[package]
name = "zerotwo"
version = "0.9.1"
authors = ["Silur <abrahamendre9@gmail.com>"]
description = "ZeroTwo authentication protocol with wasm bindings"
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/Silur/ZeroTwo.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.8.2"
lazy_static = "1.3.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.rand]
version = "0.7.0"
features = ["wasm-bindgen"]

[dependencies.curve25519-dalek]
version = "1.2.1"
features = ["serde"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[lib]
crate-type = ["cdylib", "rlib"]
